<?xml version="1.0" encoding="utf-8"?>
<!-- API LEVEL 13 and down -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
<!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/save_intent_enable_pref"
        android:title="@string/enable_intent_saving" />
-->

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/separator_enable_pref"
        android:title="@string/enable_note_separators" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/confirmation_toast_enable_pref"
        android:title="@string/enable_confirmation_toast"
        android:summary="@string/enable_confirmation_toast_summary"/>

    <EditTextPreference
        android:defaultValue="@string/note_separators_content_default"
        android:key="@string/separator_content_pref"
        android:title="@string/note_separators_content"
        android:dialogMessage="@string/note_separators_content_message"
        android:hint="@string/note_separators_content_default"
        />
    <EditTextPreference
        android:defaultValue="@string/save_folder_default"
        android:key="@string/save_folder_pref"
        android:title="@string/save_folder_title"
        android:dialogMessage="@string/save_folder_message"
        android:hint="@string/save_folder_default"
        />



</PreferenceScreen>